--- a/pages/curso-amamentacao-indiv.html
+++ b/pages/curso-amamentacao-indiv.html
@@ -444,7 +444,8 @@
                             <img src="../img/blog/amame-grupo.jpg" alt="">
                         </div>
                         <div class="blog__item__text">
-                            <h5><a href="#">Curso de Preparação para a Amamentação em grupo</a></h5>
+                            <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
+                                    grupo</a></h5>
                             <ul>
                                 <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
                                 <li>Dec 06, 2019</li>
@@ -458,7 +459,8 @@
                             <img src="../img/blog/details/amame.jpg" alt="">
                         </div>
                         <div class="blog__item__text">
-                            <h5><a href="#">Curso de Preparação para a Amamentação Individual</a></h5>
+                            <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
+                                    Individual</a></h5>
                             <ul>
                                 <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
                                 <li>Dec 06, 2019</li>
@@ -472,7 +474,7 @@
                             <img src="../img/151.jpeg" alt="">
                         </div>
                         <div class="blog__item__text">
-                            <h5><a href="#">Curso de Preparação para o Parto em Grupo</a></h5>
+                            <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
                             <ul>
                                 <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                 <li>Dec 06, 2019</li>
