--- a/pages/footer.html
+++ b/pages/footer.html
@@ -59,7 +59,7 @@
                     <a href="#!" class="text-white">Apoio ao domicilio</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Cursos</a>
+                    <a href="cursos.html" class="text-white">Cursos</a>
                 </p>
 
                 <p>
@@ -88,7 +88,7 @@
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-white">
                 <!-- Links -->
                 <h4 class="text-uppercase fw-bold mb-2">Contacto</h4>
-                <p><img src="../img/icons/horario.png" class="fa mr-3" width="20" height="20" alt="">  Seg. a Sex.
+                <p><img src="../img/icons/horario.png" class="fa mr-3" width="20" height="20" alt=""> Seg. a Sex.
                     8:00 às 18:00</p>
                 <p><img src="../img/icons/email.png" class="fa mr-3" width="20" height="20" alt="">
                     geral@aclinica-mz.com</p>
@@ -106,7 +106,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="footer__copyright__text">
-                        <p>Copyright ©Techzone,Lda. (2025) Todos os direitos reservados.</p>
+                        <p>@A Clinica (2025) Todos os direitos reservados. | <b class="text-white underline"> <a
+                                    class="text-white" href="techzone.co.mz "> Powered by Techzone</a></b></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
