--- a/footer.html
+++ b/footer.html
@@ -56,7 +56,7 @@
                     <a href="#!" class="text-white">Apoio ao domicilio</a>
                 </p>
                 <p>
-                    <a href="#!" class="text-white">Cursos</a>
+                    <a href="pages/cursos.html" class="text-white">Cursos</a>
                 </p>
 
                 <p>
@@ -73,7 +73,7 @@
                 </p>
 
                 <p>
-                    <a href="#!" class="text-white">Workshop</a>
+                    <a href="#!" class="text-white">Workshops</a>
                 </p>
             </div>
             <!-- Grid column -->
@@ -100,7 +100,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="footer__copyright__text">
-                        <p>@A Clinica (2025) Todos os direitos reservados. | <b class="text-white underline"> <a class="text-white" href="techzone.com"> Powered by Techzone</a></b></p>
+                        <p>@A Clinica (2025) Todos os direitos reservados. | <b class="text-white underline"> <a
+                                    class="text-white" href="techzone.co.mz "> Powered by Techzone</a></b></p>
 
                     </div>
                 </div>
