--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
+        .services__item:hover {
+    background: #b1cad4;
+}
         .services__item {
             background: #d6a294;
             padding: 45px 30px 45px 50px;
@@ -381,7 +384,7 @@
                                 </div>
                             </div>
                             <div class="section-title  text-center mb-4">
-                                <h4 class=" mb-2 mt-6"><b>! Informação importante</b></h3>
+                                <h4 class=" mb-2 mt-6"><b>! Informação importante !</b></h3>
                             </div>
                             <p>
                                 O Curso de Preparação para a Amamentação em Grupo encontra-se estruturado numa sequência
