--- a/pages/curso-amamentacao-indiv.html
+++ b/pages/curso-amamentacao-indiv.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css">
 
     <style>
+        .services__item:hover {
+    background: #d6a294;
+}
         .services__item {
             background: #b1cad4;
             padding: 45px 30px 45px 50px;
@@ -399,7 +402,7 @@
                                             <li><i class="fa fa-check-circle"></i> Medos e preocupações em torno da
                                                 amamentação.</li>
                                             <li><i class="fa fa-check-circle"></i> Rede de apoio.</li>
-                                            <li><i class="fa fa-check-circle"></i> Prática: Falar sobre redes de apoio,
+                                            <li>Falar sobre redes de apoio,
                                                 os meus medos em relação à amamentação.
                                             </li>
                                         </ul>
@@ -412,7 +415,7 @@
                                 </div>
                             </div>
                             <div class="section-title  text-center mb-4">
-                                <h4 class=" mb-2 mt-6"><b>! Informação importante</b></h3>
+                                <h4 class=" mb-2 mt-6"><b>! Informação importante !</b></h3>
                             </div>
                             <p>
                                 O Curso de Preparação para a Amamentação em Grupo encontra-se estruturado numa sequência
@@ -509,7 +512,7 @@
             <li><i class="fa fa-check-circle"></i> Mitos sobre a amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Medos e preocupações em torno da amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Rede de apoio.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: Falar sobre redes de apoio, os meus medos em relação à amamentação.</li>
+            <li><b class="underline">Prática: </b>Falar sobre redes de apoio, os meus medos em relação à amamentação.</li>
         </ul>`,
                 M2: `Módulo 2: Anatomia e fisiologia da amamentação:
         <ul class="services__details__feature">
@@ -518,14 +521,14 @@
             <li><i class="fa fa-check-circle"></i> Mudanças no puerpério: descida/subida do leite.</li>
             <li><i class="fa fa-check-circle"></i> Diferentes fases do leite materno.</li>
             <li><i class="fa fa-check-circle"></i> Diferentes tipos de mamilos não interferem com a amamentação.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: extração do colostro na gravidez, extração manual de leite materno.</li>
+            <li><b class="underline">Prática: </b>extração do colostro na gravidez, extração manual de leite materno.</li>
         </ul>`,
                 M3: `Módulo 3: Técnicas de aleitamento:
         <ul class="services__details__feature">
             <li><i class="fa fa-check-circle"></i> Posições de amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Pega correta: Amamentação sem dor.</li>
             <li><i class="fa fa-check-circle"></i> Sinais de fome no bebé.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: Identificação de uma pega correta e posições.</li>
+            <li><b class="underline">Prática: </b>Identificação de uma pega correta e posições.</li>
         </ul>`,
                 M4: `Módulo 4: Dificuldades na amamentação:
         <ul class="services__details__feature">
@@ -535,7 +538,7 @@
             <li><i class="fa fa-check-circle"></i> Mastite e abscessos mamários.</li>
             <li><i class="fa fa-check-circle"></i> Contraindicações da amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Confusão de bicos.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: Pega correta, alívio do ingurgitamento mamário.</li>
+            <li><b class="underline">Prática: </b>Pega correta, alívio do ingurgitamento mamário.</li>
         </ul>`,
                 M5: `Módulo 5: Produtos úteis na Amamentação. Amamentação e regresso ao trabalho:
         <ul class="services__details__feature">
@@ -547,7 +550,7 @@
             <li><i class="fa fa-check-circle"></i> Bolsas de calor e frio e Parches de hidrogel.</li>
             <li><i class="fa fa-check-circle"></i> Armazenamento de leite materno.</li>
             <li><i class="fa fa-check-circle"></i> Preparar o regresso ao trabalho.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: como extrair o leite materno com bomba.</li>
+            <li><b class="underline">Prática: </b>como extrair o leite materno com bomba.</li>
         </ul>`
             };
 
