--- a/pages/curso-prep-grupo.html
+++ b/pages/curso-prep-grupo.html
@@ -394,7 +394,7 @@
                                 </div>
                             </div>
                             <div class="section-title  text-center mb-4">
-                                <h4 class=" mb-2 mt-6"><b>! Informação importante</b></h3>
+                                <h4 class=" mb-2 mt-6"><b>! Informação importante !</b></h3>
                             </div>
                             <p>
                                 O Curso de Preparação para o Parto em Grupo encontra-se estruturado numa sequência
