--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -371,7 +371,7 @@
                                             <li><i class="fa fa-check-circle"></i> Medos e preocupações em torno da
                                                 amamentação.</li>
                                             <li><i class="fa fa-check-circle"></i> Rede de apoio.</li>
-                                            <li><i class="fa fa-check-circle"></i> Prática: Falar sobre redes de apoio,
+                                            <li><b class="underline">Prática: </b>Falar sobre redes de apoio,
                                                 os meus medos em relação à amamentação.
                                             </li>
                                         </ul>
@@ -481,7 +481,7 @@
             <li><i class="fa fa-check-circle"></i> Mitos sobre a amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Medos e preocupações em torno da amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Rede de apoio.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: Falar sobre redes de apoio, os meus medos em relação à amamentação.</li>
+            <li><b class="underline">Prática: </b>Falar sobre redes de apoio, os meus medos em relação à amamentação.</li>
         </ul>`,
                 M2: `Módulo 2: Anatomia e fisiologia da amamentação:
         <ul class="services__details__feature">
@@ -490,14 +490,14 @@
             <li><i class="fa fa-check-circle"></i> Mudanças no puerpério: descida/subida do leite.</li>
             <li><i class="fa fa-check-circle"></i> Diferentes fases do leite materno.</li>
             <li><i class="fa fa-check-circle"></i> Diferentes tipos de mamilos não interferem com a amamentação.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: extração do colostro na gravidez, extração manual de leite materno.</li>
+            <li><b class="underline">Prática: </b>extração do colostro na gravidez, extração manual de leite materno.</li>
         </ul>`,
                 M3: `Módulo 3: Técnicas de aleitamento:
         <ul class="services__details__feature">
             <li><i class="fa fa-check-circle"></i> Posições de amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Pega correta: Amamentação sem dor.</li>
             <li><i class="fa fa-check-circle"></i> Sinais de fome no bebé.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: Identificação de uma pega correta e posições.</li>
+            <li><b class="underline">Prática: </b>Identificação de uma pega correta e posições.</li>
         </ul>`,
                 M4: `Módulo 4: Dificuldades na amamentação:
         <ul class="services__details__feature">
@@ -507,7 +507,7 @@
             <li><i class="fa fa-check-circle"></i> Mastite e abscessos mamários.</li>
             <li><i class="fa fa-check-circle"></i> Contraindicações da amamentação.</li>
             <li><i class="fa fa-check-circle"></i> Confusão de bicos.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: Pega correta, alívio do ingurgitamento mamário.</li>
+            <li><b class="underline">Prática: </b>Pega correta, alívio do ingurgitamento mamário.</li>
         </ul>`,
                 M5: `Módulo 5: Produtos úteis na Amamentação. Amamentação e regresso ao trabalho:
         <ul class="services__details__feature">
@@ -519,7 +519,7 @@
             <li><i class="fa fa-check-circle"></i> Bolsas de calor e frio e Parches de hidrogel.</li>
             <li><i class="fa fa-check-circle"></i> Armazenamento de leite materno.</li>
             <li><i class="fa fa-check-circle"></i> Preparar o regresso ao trabalho.</li>
-            <li><i class="fa fa-check-circle"></i> Prática: como extrair o leite materno com bomba.</li>
+            <li><b class="underline">Prática: </b>como extrair o leite materno com bomba.</li>
         </ul>`
             };
 
