--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -175,7 +175,7 @@
                                         <img src="../img/team/team-6.jpg" alt="Member Photo">
                                     </div>
                                     <div class="team-content">
-                                        <h4 class="mb-2">Dra. Erika Pereira</h4>
+                                        <h4 class="mb-2">Erika Pereira</h4>
                                         <p>Nutricionista</p>
                                     </div>
                                      </button>
@@ -256,7 +256,7 @@
 
            // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
            function showB() {
-            nome.textContent = "Dra. Erika Pereira"; // Atualiza o texto para "Calisto Chemane"
+            nome.textContent = "Erika Pereira"; // Atualiza o texto para "Calisto Chemane"
             icone.style.backgroundImage = "url('../img/icons/nutrição.png')";
             tempo.textContent = "Connosco a ajudar famílias desde 2018."; // Atualiza o texto
             funcao.textContent = "Especialista Nutricionista "; // Atualiza o texto
