--- a/pages/curso-amamentacao-grupo.html
+++ b/pages/curso-amamentacao-grupo.html
@@ -269,8 +269,8 @@
                                                 </div>
                                                 <div class="col-lg-12 d-inline-block">
                                                     <div class="d-flex align-items-center mb-4">
-                                                        <img src="../img/icons/horario.png" class="fas mr-3 " alt=""
-                                                            style="width: 4rem;">
+                                                        <img src="../img/icons/amamentação-white.png" class="fas mr-3 "
+                                                            alt="" style="width: 4rem;">
                                                         <p class="text-justify text-white h5">
                                                             Acesso a materiais exclusivos sobre
                                                             amamentação durante 6 meses na área reservada.
@@ -286,8 +286,8 @@
                                                         </p>
                                                     </div>
                                                     <div class="d-flex align-items-center mb-4">
-                                                        <img src="../img/icons/amamentação-white.png" class="fas mr-3 "
-                                                            alt="" style="width: 4rem;">
+                                                        <i class="fa fa-whatsapp"
+                                                            style="width: 4rem !important; color: white;font-size: 3.5rem !important;margin-right: 1.3rem;"></i>
                                                         <p class="text-justify text-white h5">
                                                             Um acompanhamento sobre a amamentação da grávida ou casal
                                                             durante a sua gravidez e no pós-parto através de grupo de
