--- a/team.html
+++ b/team.html
@@ -215,7 +215,7 @@
                                             <img src="img/team/team-6.jpg" alt="Member Photo">
                                         </div>
                                         <div class="team-content">
-                                            <h4 class="mb-2">Dra. Erika Pereira</h4>
+                                            <h4 class="mb-2">Erika Pereira</h4>
                                             <p>Nutricionista</p>
                                         </div>
                                     </a>
