--- a/pages/gravidez.html
+++ b/pages/gravidez.html
@@ -394,55 +394,130 @@
     <!-- Seção de Rodapé Fim -->
 
     <script>
-   document.addEventListener("DOMContentLoaded", function () {
-    const sections = {
-        A: { btn: "ABtn", div: "A", title: "Diabetes Gestacional:", img: "amigdalite.jpg" },
-        B: { btn: "BBtn", div: "B", title: "Snoezelen na gravidez:", img: "Snoezelen.png" },
-        D: { btn: "DBtn", div: "D", title: "Consulta de Pré-conceção", img: "Pré-conceção.jpg" },
-        E: { btn: "EBtn", div: "E", title: "Consulta de Pré-natal", img: "diabetes.jpg" }
-    };
+        // Obter os botões e as divs
+        const ABtn = document.getElementById('ABtn');
+        const ADiv = document.getElementById('A');
+        const BBtn = document.getElementById('BBtn');
+        const BDiv = document.getElementById('B');
+        const DBtn = document.getElementById('DBtn');
+        const DDiv = document.getElementById('D');
+        const EBtn = document.getElementById('EBtn');
+        const EDiv = document.getElementById('E');
+        const title = document.getElementById('title');
+        const img = document.getElementById('img');
+        const header = document.getElementById('header');
 
-    const title = document.getElementById('title');
-    const img = document.getElementById('img');
-    const header = document.getElementById('header');
+        // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
+        function showA() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+            header.classList.add("d-none");
+            ADiv.style.display = 'block'; // Exibe a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div pós-parto
+            DDiv.style.display = 'none';  // Esconde a div pós-parto
+            EDiv.style.display = 'none';  // Esconde a div pós-parto
+            title.textContent = "Diabetes Gestacional:"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/amigdalite.jpg')"; // Atualiza o texto para "Cirurgia"
+            ABtn.classList.add("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+        }
 
-    function showSection(key) {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-        header.classList.add("d-none");
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+        function showB() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+            header.classList.add("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'block'; // Exibe a div pós-parto
+            DDiv.style.display = 'none'; // Exibe a div pós-parto
+            EDiv.style.display = 'none'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/Snoezelen.png')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Snoezelen na gravidez:"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.add("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+        }
 
-        Object.keys(sections).forEach(sectionKey => {
-            const section = sections[sectionKey];
-            document.getElementById(section.div).style.display = (sectionKey === key) ? 'block' : 'none';
-            document.getElementById(section.btn).classList.toggle("active", sectionKey === key);
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+        function showD() {
+            header.classList.add("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div Cirurgia
+            DDiv.style.display = 'block'; // Exibe a div pós-parto
+            EDiv.style.display = 'none'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.add("active");
+            EBtn.classList.remove("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+        function showE() {
+            header.classList.add("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div Cirurgia
+            DDiv.style.display = 'none'; // Exibe a div pós-parto
+            EDiv.style.display = 'block'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pré-natal"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.add("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        function show(){
+            header.classList.remove("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div Cirurgia
+            DDiv.style.display = 'none'; // Exibe a div pós-parto
+            EDiv.style.display = 'none'; // Exibe a div pós-parto
+            title.textContent = "Diabetes Gestacional"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        // Verificar o fragmento da URL e inicializar a página de acordo
+        window.addEventListener('load', function () {
+            const hash = window.location.hash; // Pega a parte após o "#"
+
+            if (hash === "#A") {
+                showA(); // Se o hash for "#A", exibe Cirurgia
+            } else if (hash === "#B") {
+                showB(); // Se o hash for "#pos", exibe pós-parto
+            } else if (hash === "#D") {
+                showD(); // Se o hash for "#pos", exibe pós-parto
+            } else if (hash === "#E") {
+                showE(); // Se o hash for "#pos", exibe pós-parto
+            }
+            else {
+                show(); // Se não houver hash ou hash desconhecido, exibe Cirurgia por padrão
+            }
         });
 
-        title.textContent = sections[key].title;
-        img.style.backgroundImage = `url('../img/blog/details/${sections[key].img}')`;
-    }
+        // Adicionar funcionalidade dos botões
+        ABtn.addEventListener('click', function () {
+            window.location.hash = "#A"; // Atualiza o URL para "#A" ao clicar no botão Cirurgia
+            showA(); // Exibe a consulta Cirurgia
+        });
 
-    function initializePage() {
-        const hash = window.location.hash.replace("#", "") || "A";
-        if (sections[hash]) {
-            showSection(hash);
-        } else {
-            header.classList.remove("d-none");
-        }
-    }
-
-    Object.keys(sections).forEach(sectionKey => {
-        const btn = document.getElementById(sections[sectionKey].btn);
-        if (btn) {
-            btn.addEventListener("click", () => {
-                window.location.hash = `#${sectionKey}`;
-                showSection(sectionKey);
-            });
-        }
-    });
-
-    window.addEventListener("hashchange", initializePage);
-    initializePage();
-});
-
+        BBtn.addEventListener('click', function () {
+            window.location.hash = "#B"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showB(); // Exibe a consulta pós-parto
+        });
+        DBtn.addEventListener('click', function () {
+            window.location.hash = "#D"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showD(); // Exibe a consulta pós-parto
+        });
+        EBtn.addEventListener('click', function () {
+            window.location.hash = "#E"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showE(); // Exibe a consulta pós-parto
+        });
     </script>
     <!-- Js Plugins -->
     <script src="../js/jquery-3.3.1.min.js"></script>
