--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -473,62 +473,130 @@
     <!-- Seção de Rodapé Fim -->
 
     <script>
-       // Obter os botões e as divs
-const buttons = {
-    A: document.getElementById('ABtn'),
-    B: document.getElementById('BBtn'),
-    D: document.getElementById('DBtn'),
-    E: document.getElementById('EBtn')
-};
+        // Obter os botões e as divs
+        const ABtn = document.getElementById('ABtn');
+        const ADiv = document.getElementById('A');
+        const BBtn = document.getElementById('BBtn');
+        const BDiv = document.getElementById('B');
+        const DBtn = document.getElementById('DBtn');
+        const DDiv = document.getElementById('D');
+        const EBtn = document.getElementById('EBtn');
+        const EDiv = document.getElementById('E');
+        const title = document.getElementById('title');
+        const img = document.getElementById('img');
+        const header = document.getElementById('header');
 
-const sections = {
-    A: { div: document.getElementById('A'), title: "Consulta de Nutrição Geral", img: "nutri-geral.jpg" },
-    B: { div: document.getElementById('B'), title: "Consulta de Nutrição Infantil", img: "nutrio-infant.jpg" },
-    D: { div: document.getElementById('D'), title: "Consulta de Pré-conceção", img: "Pré-conceção.jpg" },
-    E: { div: document.getElementById('E'), title: "Consulta de Pré-natal", img: "diabetes.jpg" }
-};
+        // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
+        function showA() {
+            header.classList.add("d-none");
+            ADiv.style.display = 'block'; // Exibe a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div pós-parto
+            DDiv.style.display = 'none';  // Esconde a div pós-parto
+            EDiv.style.display = 'none';  // Esconde a div pós-parto
+            title.textContent = "Consulta de Nutrição Geral"; // Atualiza o texto para "Cirurgia"
+            img.style.backgroundImage = "url('../img/blog/details/nutri-geral.jpg')"; // Atualiza o texto para "Cirurgia"
+            ABtn.classList.add("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
 
-const title = document.getElementById('title');
-const img = document.getElementById('img');
-const header = document.getElementById('header');
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+        function showB() {
+            header.classList.add("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'block'; // Exibe a div pós-parto
+            DDiv.style.display = 'none'; // Exibe a div pós-parto
+            EDiv.style.display = 'none'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/nutrio-infant.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Nutrição Infantil"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.add("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
 
-// Função genérica para exibir a consulta
-function showSection(key) {
-    header.classList.add("d-none");
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+        function showD() {
+            header.classList.add("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div Cirurgia
+            DDiv.style.display = 'block'; // Exibe a div pós-parto
+            EDiv.style.display = 'none'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.add("active");
+            EBtn.classList.remove("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        // Função para exibir a consulta pós-parto, esconder a Cirurgia e atualizar o texto
+        function showE() {
+            header.classList.add("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div Cirurgia
+            DDiv.style.display = 'none'; // Exibe a div pós-parto
+            EDiv.style.display = 'block'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/diabetes.jpg')"; // Atualiza o texto para "Cirurgia"
+            title.textContent = "Consulta de Pré-natal"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.add("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        function show(){
+            header.classList.remove("d-none");
+            ADiv.style.display = 'none';  // Esconde a div Cirurgia
+            BDiv.style.display = 'none';  // Esconde a div Cirurgia
+            DDiv.style.display = 'none'; // Exibe a div pós-parto
+            EDiv.style.display = 'none'; // Exibe a div pós-parto
+            title.textContent = "Nutrição"; // Atualiza o texto para "Pós-parto"
+            ABtn.classList.remove("active");
+            BBtn.classList.remove("active");
+            DBtn.classList.remove("active");
+            EBtn.classList.remove("active");
+            window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
+        }
+        // Verificar o fragmento da URL e inicializar a página de acordo
+        window.addEventListener('load', function () {
+            const hash = window.location.hash; // Pega a parte após o "#"
 
-    // Ocultar todas as seções
-    Object.values(sections).forEach(section => section.div.style.display = 'none');
+            if (hash === "#A") {
+                showA(); // Se o hash for "#A", exibe Cirurgia
+            } else if (hash === "#B") {
+                showB(); // Se o hash for "#pos", exibe pós-parto
+            } else if (hash === "#D") {
+                showD(); // Se o hash for "#pos", exibe pós-parto
+            } else if (hash === "#E") {
+                showE(); // Se o hash for "#pos", exibe pós-parto
+            }
+            else {
+                show(); // Se não houver hash ou hash desconhecido, exibe Cirurgia por padrão
+            }
+        });
 
-    // Exibir a seção selecionada
-    if (sections[key]) {
-        sections[key].div.style.display = 'block';
-        title.textContent = sections[key].title;
-        img.style.backgroundImage = `url('../img/blog/details/${sections[key].img}')`;
-    } else {
-        header.classList.remove("d-none");
-        title.textContent = "Nutrição";
-    }
+        // Adicionar funcionalidade dos botões
+        ABtn.addEventListener('click', function () {
+            window.location.hash = "#A"; // Atualiza o URL para "#A" ao clicar no botão Cirurgia
+            showA(); // Exibe a consulta Cirurgia
+        });
 
-    // Atualizar os botões ativos
-    Object.keys(buttons).forEach(k => buttons[k].classList.toggle("active", k === key));
-
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-}
-
-// Verificar o fragmento da URL e inicializar a página corretamente
-window.addEventListener('load', () => {
-    const hash = window.location.hash.replace("#", ""); // Remover o #
-    showSection(hash || null); // Se não houver hash, mostra a página inicial
-});
-
-// Adicionar funcionalidade aos botões
-Object.keys(buttons).forEach(key => {
-    buttons[key].addEventListener('click', () => {
-        window.location.hash = `#${key}`;
-        showSection(key);
-    });
-});
-
+        BBtn.addEventListener('click', function () {
+            window.location.hash = "#B"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showB(); // Exibe a consulta pós-parto
+        });
+        DBtn.addEventListener('click', function () {
+            window.location.hash = "#D"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showD(); // Exibe a consulta pós-parto
+        });
+        EBtn.addEventListener('click', function () {
+            window.location.hash = "#E"; // Atualiza o URL para "#pos" ao clicar no botão pós-parto
+            showE(); // Exibe a consulta pós-parto
+        });
     </script>
     <!-- Js Plugins -->
     <script src="../js/jquery-3.3.1.min.js"></script>
