--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -579,9 +579,13 @@
             }
         });
         window.addEventListener('hashchange', function () {
-    window.scrollTo({ top: 0, behavior: 'smooth' }); // Rola para o topo suavemente antes de recarregar
-    location.reload(); // Recarrega a página
-});
+        location.reload(); // Recarrega a página
+        });
+
+        window.addEventListener('DOMContentLoaded', function () {
+            window.scrollTo({ top: 0, behavior: 'smooth' }); // Após o carregamento, rola para o topo
+        });
+
 
 
         // Adicionar funcionalidade dos botões
