--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><!DOCTYPE html>
 <html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
-   <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description"
+        content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -78,10 +78,11 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
- <a class="float-button" target="_blank" href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
+    <a class="float-button" target="_blank"
+        href="https://faq.whatsapp.com/general/chats/how-to-use-click-to-chat/?lang=en">
         <i class="fa fa-whatsapp" aria-hidden="true"></i>
         <span>Fale connosco!<span>
-      </a>
+    </a>
     <!-- Offcanvas Menu Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
@@ -145,7 +146,8 @@
                                 </div>
                             </div>
 
-                            <p><i>A Clínica</i> nasce em 2025 do sonho de criar um espaço onde as famílias se sintam em casa.
+                            <p><i>A Clínica</i> nasce em 2025 do sonho de criar um espaço onde as famílias se sintam em
+                                casa.
                                 <br> Diz o ditado que <b>«para criar uma criança faz falta uma aldeia»</b> e, no
                                 mundo
                                 agitado onde vivemos, cada vez há menos rede
@@ -204,22 +206,22 @@
 
                         <h2 class="text-white mb-3">Destaque</h2>
                     </div>
-                        <span class="text-white" style="font-size: 19px;">A NOSSA VISÃO HOLÍSTICA da saúde abrange o seu
-                            todo. Sabemos que a
-                            saúde mental é tão ou mais importante que a saúde
-                            física. Cuidar dos nossos pacientes e das suas famílias desde a EMPATIA e da DISPONIBILIDADE
-                            para ouvir as suas
-                            preocupações ou receios é a nossa forma de estar como PROFISSIONAIS DE SAÚDE. <br><br>
+                    <span class="text-white" style="font-size: 19px;">A NOSSA VISÃO HOLÍSTICA da saúde abrange o seu
+                        todo. Sabemos que a
+                        saúde mental é tão ou mais importante que a saúde
+                        física. Cuidar dos nossos pacientes e das suas famílias desde a EMPATIA e da DISPONIBILIDADE
+                        para ouvir as suas
+                        preocupações ou receios é a nossa forma de estar como PROFISSIONAIS DE SAÚDE. <br><br>
 
-                            A EXCELÊNCIA NO ATENDIMENTO aos nossos pacientes é a nossa imagem de marca. <br>
-                            A FORMAÇÃO CONTINUADA dos nossos PROFISSIONAIS DE SAÚDE é imprescindível. <br>
-                            A transmissão de INFORMAÇÃO CIENTISTA DE QUALIDADE baseada nos estudos mais atuais é o
-                            nosso compromisso. <br><br>
-                            A Clínica segue as GUIDELINES INTERNACIONAIS internacionais validadas pelas entidades
-                            responsáveis e
-                            credíveis em cada uma das suas
-                            especialidades.
-                        </span>
+                        A EXCELÊNCIA NO ATENDIMENTO aos nossos pacientes é a nossa imagem de marca. <br>
+                        A FORMAÇÃO CONTINUADA dos nossos PROFISSIONAIS DE SAÚDE é imprescindível. <br>
+                        A transmissão de INFORMAÇÃO CIENTISTA DE QUALIDADE baseada nos estudos mais atuais é o
+                        nosso compromisso. <br><br>
+                        A Clínica segue as GUIDELINES INTERNACIONAIS internacionais validadas pelas entidades
+                        responsáveis e
+                        credíveis em cada uma das suas
+                        especialidades.
+                    </span>
                 </div>
             </div>
         </div>
@@ -282,11 +284,14 @@
                         </div>
 
                         <ul>
-                            <li><img src="img/icons/home 2.png" class="fa mr-3" width="20" height="20" alt=""> Edifício ou Shopping 24, Avenida 24 de Julho, Loja 20
+                            <li><img src="img/icons/home 2.png" class="fa mr-3" width="20" height="20" alt=""> Edifício
+                                ou Shopping 24, Avenida 24 de Julho, Loja 20
                                 ( R/C, corredor central ao lado do cabeleireiro)
                             </li>
-                            <li><img src="img/icons/contacto 2.png" class="fa mr-3" width="20" height="20" alt=""> +258 84 869 7194</li>
-                            <li><img src="img/icons/email 2.png" class="fa mr-3" width="20" height="20" alt=""> geral@aclinica-mz.com</li>
+                            <li><img src="img/icons/contacto 2.png" class="fa mr-3" width="20" height="20" alt=""> +258
+                                84 869 7194</li>
+                            <li><img src="img/icons/email 2.png" class="fa mr-3" width="20" height="20" alt="">
+                                geral@aclinica-mz.com</li>
                         </ul>
 
                         <p>
