--- a/header.html
+++ b/header.html
@@ -195,9 +195,9 @@
                         <li><a class="arrow" href="./additional-services.html">Apoio ao domicílio <span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">Amamentação</a></li>
-                                <li><a href="#">Enfermagem</a></li>
-                                <li><a href="#">Teste do pezinho</a></li>
+                                <li><a href="pages/domicilio.html#A">Amamentação</a></li>
+                                <li><a href="pages/domicilio.html#B">Enfermagem</a></li>
+                                <li><a href="pages/teste.html#A">Teste do pezinho</a></li>
                             </ul>
                         </li><!-- Serviços Adicionais -->
                         <li><a class="arrow" href="./additional-services.html">Workshops<span
